# SharpPrint

./: .gitmodules  Example.cs  LICENSE  README.md  SharpPrint.csproj  SharpPrint.sln
Algorithm/: ChromaPrinter.cs  Factory.cs  MonoLoader.cs
lib/: Essentia.cs
native/: build-ubuntu.sh
native/essentia-binding/: meson.build
native/essentia-binding/src/: essentia-bindings.cpp  essentia-bindings.h
